# solana-arc

./: README.md
basic_bank/: Anchor.toml
basic_bank/tests/: basic_bank.ts
day1/: Anchor.toml
day10-visibility-inherit/: Anchor.toml
day10-visibility-inherit/tests/: day10-visibility-inherit.ts
day11-sol-block-clock/: Anchor.toml
day11-sol-block-clock/programs/day11-sol-block-clock/: Cargo.toml
day11-sol-block-clock/programs/day11-sol-block-clock/src/: lib.rs
day11-sol-block-clock/tests/: day11-sol-block-clock.ts
day12-sol-sysvar/: Anchor.toml
day12-sol-sysvar/tests/: day12-sol-sysvar.ts
day13-logs-event-sol/: Anchor.toml
day13-logs-event-sol/tests/: day13-logs-event-sol.ts
day14-tx-origin-owner/: Anchor.toml
day14-tx-origin-owner/programs/day14-tx-origin-owner/: Cargo.toml
day14-tx-origin-owner/programs/day14-tx-origin-owner/src/: lib.rs
day14-tx-origin-owner/tests/: day14-tx-origin-owner.ts
day15-sol-compute-unit/: Anchor.toml
day15-sol-compute-unit/tests/: day15-sol-compute-unit.ts
day16-acc-basic-storage/: Anchor.toml
day16-acc-basic-storage/programs/day16-acc-basic-storage/: Cargo.toml
day16-acc-basic-storage/programs/day16-acc-basic-storage/src/: lib.rs
day16-acc-basic-storage/tests/: day16-acc-basic-storage.ts
day17-sol-counter/: Anchor.toml
day17-sol-counter/tests/: day17-sol-counter.ts
day18-other-program/: Anchor.toml
day18-other-program/tests/: day18-other-program.ts
day18-read-frontend-acc-sol/: Anchor.toml
day18-read-frontend-acc-sol/tests/: day18-read-frontend-acc-sol.ts
day18-read-program/: Anchor.toml
day18-read-program/tests/: day18-read-program.ts
day19-sol-mapping/: Anchor.toml
day19-sol-mapping/tests/: day19-sol-mapping.ts
day2/: Anchor.toml  Cargo.toml
day2/tests/: day2.ts
day20-rent-cost-acc/: Anchor.toml
day20-rent-cost-acc/tests/: day20-rent-cost-acc.ts
day21-read-sol-acc-balance/: Anchor.toml
day21-read-sol-acc-balance/programs/day21-read-sol-acc-balance/: Cargo.toml
day21-read-sol-acc-balance/programs/day21-read-sol-acc-balance/src/: lib.rs
day21-read-sol-acc-balance/tests/: day21-read-sol-acc-balance.ts
day23-sol-splitter-transfer/: Anchor.toml
day23-sol-splitter-transfer/tests/: day23-sol-splitter-transfer.ts
day24-edit-acc-diff-signers/: Anchor.toml
day24-edit-acc-diff-signers/tests/: day24-edit-acc-diff-signers.ts
day24-proto-erc20-authority/: Anchor.toml
day24-proto-erc20-authority/programs/day24-proto-erc20-authority/: Cargo.toml
day24-proto-erc20-authority/programs/day24-proto-erc20-authority/src/: lib.rs
day24-proto-erc20-authority/tests/: day24-proto-erc20-authority.ts
day25-pda-keypair-acc/: Anchor.toml
day25-pda-keypair-acc/tests/: day25-pda-keypair-acc.ts
day26-account-ownership-sol/: Anchor.toml
day26-account-ownership-sol/tests/: day26-account-ownership-sol.ts
day26-crowdfund-sol-transf-withd/: Anchor.toml
day26-crowdfund-sol-transf-withd/tests/: day26-crowdfund-sol-transf-withd.ts
day27-init-if-needed/: Anchor.toml
day27-reinit-attack/: Anchor.toml
day28-batch-multicall-builtin/: Anchor.toml
day29-owner-vs-authority/: Anchor.toml
day29-view-authority-in-program/: Anchor.toml  tempfile
day3/: Anchor.toml
day3/tests/: day3.ts
day30-close-acc-program/: Anchor.toml
day32-data-holder-on-chain/: Anchor.toml
day32-data-reader-on-chain/: Anchor.toml
day33-cpi-bob/: Anchor.toml
day33-cpi-bob/programs/alice/: Cargo.toml
day33-cpi-bob/programs/alice/src/: lib.rs
day4/: Anchor.toml
day5/: Anchor.toml
day6/: Anchor.toml
day9-macro-demo/: Cargo.toml
spl_token/: Anchor.toml  package-lock.json
spl_token_ts/: Anchor.toml  package-lock.json
spl_with_metadata/: Anchor.toml  package-lock.json  package.json
token_sale/: Anchor.toml  package-lock.json
(+84 files in other folders)
